prometheus_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: prometheus
  name: prometheus
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prometheus
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: prometheus
    spec:
      containers:
      - image: rycus86/prometheus
        name: prometheus
        ports:
        - containerPort: 9090
        resources: {}
        volumeMounts:
        - name: prometheus-config
          mountPath: /etc/prometheus
        - mountPath: /prometheus
          name: prometheus-pvc
      volumes:
        - name: prometheus-pvc
          persistentVolumeClaim:
            claimName: prometheus-pvc
        - name: prometheus-config
          configMap:
            name: prometheus-config
            items:
            - key: prometheus.yml
              path: prometheus.yml
status: {}
