prometheus_node_exporter_daemonSet.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: prometheus-node-exporter
spec:
  selector:
    matchLabels:
      app: prometheus-node-exporter
  template:
    metadata:
      labels:
        app: prometheus-node-exporter
      annotations:
        prometheus.io/scrape: 'true'
        prometheus.io/port: '9100'
    spec:
      containers:
        - name: prometheus-node-exporter
          image: rycus86/prometheus-node-exporter
          ports:
          - containerPort: 9100
      hostNetwork: true
      hostPID: true
