ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
  generation: 1
  name: prometheus
  namespace: prometheus
spec:
  rules:
  - host: prometheus.svc.k3s.ark
    http:
      paths:
      - backend:
          serviceName: prometheus
          servicePort: 9090
        path: /
